// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hyphenate renders 0 1`] = `
Array [
  .c0 {
  -webkit-hyphenate: 0;
  -moz-hyphenate: 0;
  -ms-hyphenate: 0;
  hyphenate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: 0;
  -moz-hyphenate: 0;
  -ms-hyphenate: 0;
  hyphenate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: 0;
  -moz-hyphenate: 0;
  -ms-hyphenate: 0;
  hyphenate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: 0;
  -moz-hyphenate: 0;
  -ms-hyphenate: 0;
  hyphenate: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenate renders function 1`] = `
Array [
  .c0 {
  -webkit-hyphenate: hasnot;
  -moz-hyphenate: hasnot;
  -ms-hyphenate: hasnot;
  hyphenate: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: has;
  -moz-hyphenate: has;
  -ms-hyphenate: has;
  hyphenate: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: hasnot;
  -moz-hyphenate: hasnot;
  -ms-hyphenate: hasnot;
  hyphenate: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: has;
  -moz-hyphenate: has;
  -ms-hyphenate: has;
  hyphenate: has;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenate renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphenate: invalid.path.1;
  -moz-hyphenate: invalid.path.1;
  -ms-hyphenate: invalid.path.1;
  hyphenate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: invalid.path.1;
  -moz-hyphenate: invalid.path.1;
  -ms-hyphenate: invalid.path.1;
  hyphenate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: invalid.path.1;
  -moz-hyphenate: invalid.path.1;
  -ms-hyphenate: invalid.path.1;
  hyphenate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: invalid.path.1;
  -moz-hyphenate: invalid.path.1;
  -ms-hyphenate: invalid.path.1;
  hyphenate: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenate renders negative number 1`] = `
Array [
  .c0 {
  -webkit-hyphenate: -54881;
  -moz-hyphenate: -54881;
  -ms-hyphenate: -54881;
  hyphenate: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: -54881;
  -moz-hyphenate: -54881;
  -ms-hyphenate: -54881;
  hyphenate: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: -42365;
  -moz-hyphenate: -42365;
  -ms-hyphenate: -42365;
  hyphenate: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: -42365;
  -moz-hyphenate: -42365;
  -ms-hyphenate: -42365;
  hyphenate: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenate renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: July;
    -moz-hyphenate: July;
    -ms-hyphenate: July;
    hyphenate: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: August;
    -moz-hyphenate: August;
    -ms-hyphenate: August;
    hyphenate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: September;
    -moz-hyphenate: September;
    -ms-hyphenate: September;
    hyphenate: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate: November;
    -moz-hyphenate: November;
    -ms-hyphenate: November;
    hyphenate: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: July;
    -moz-hyphenate: July;
    -ms-hyphenate: July;
    hyphenate: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: August;
    -moz-hyphenate: August;
    -ms-hyphenate: August;
    hyphenate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: September;
    -moz-hyphenate: September;
    -ms-hyphenate: September;
    hyphenate: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate: November;
    -moz-hyphenate: November;
    -ms-hyphenate: November;
    hyphenate: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: May;
    -moz-hyphenate: May;
    -ms-hyphenate: May;
    hyphenate: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: June;
    -moz-hyphenate: June;
    -ms-hyphenate: June;
    hyphenate: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: April;
    -moz-hyphenate: April;
    -ms-hyphenate: April;
    hyphenate: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate: November;
    -moz-hyphenate: November;
    -ms-hyphenate: November;
    hyphenate: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: May;
    -moz-hyphenate: May;
    -ms-hyphenate: May;
    hyphenate: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: June;
    -moz-hyphenate: June;
    -ms-hyphenate: June;
    hyphenate: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate: April;
    -moz-hyphenate: April;
    -ms-hyphenate: April;
    hyphenate: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate: November;
    -moz-hyphenate: November;
    -ms-hyphenate: November;
    hyphenate: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenate renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-hyphenate: July;
    -moz-hyphenate: July;
    -ms-hyphenate: July;
    hyphenate: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate: August;
    -moz-hyphenate: August;
    -ms-hyphenate: August;
    hyphenate: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate: September;
    -moz-hyphenate: September;
    -ms-hyphenate: September;
    hyphenate: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate: November;
    -moz-hyphenate: November;
    -ms-hyphenate: November;
    hyphenate: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate: August;
    -moz-hyphenate: August;
    -ms-hyphenate: August;
    hyphenate: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-hyphenate: July;
    -moz-hyphenate: July;
    -ms-hyphenate: July;
    hyphenate: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate: August;
    -moz-hyphenate: August;
    -ms-hyphenate: August;
    hyphenate: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate: September;
    -moz-hyphenate: September;
    -ms-hyphenate: September;
    hyphenate: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate: November;
    -moz-hyphenate: November;
    -ms-hyphenate: November;
    hyphenate: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate: August;
    -moz-hyphenate: August;
    -ms-hyphenate: August;
    hyphenate: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate: January;
    -moz-hyphenate: January;
    -ms-hyphenate: January;
    hyphenate: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate: December;
    -moz-hyphenate: December;
    -ms-hyphenate: December;
    hyphenate: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate: April;
    -moz-hyphenate: April;
    -ms-hyphenate: April;
    hyphenate: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate: May;
    -moz-hyphenate: May;
    -ms-hyphenate: May;
    hyphenate: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate: June;
    -moz-hyphenate: June;
    -ms-hyphenate: June;
    hyphenate: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate: January;
    -moz-hyphenate: January;
    -ms-hyphenate: January;
    hyphenate: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate: December;
    -moz-hyphenate: December;
    -ms-hyphenate: December;
    hyphenate: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate: April;
    -moz-hyphenate: April;
    -ms-hyphenate: April;
    hyphenate: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate: May;
    -moz-hyphenate: May;
    -ms-hyphenate: May;
    hyphenate: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate: June;
    -moz-hyphenate: June;
    -ms-hyphenate: June;
    hyphenate: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenate renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-hyphenate: 54881;
  -moz-hyphenate: 54881;
  -ms-hyphenate: 54881;
  hyphenate: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: 54881;
  -moz-hyphenate: 54881;
  -ms-hyphenate: 54881;
  hyphenate: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: 42365;
  -moz-hyphenate: 42365;
  -ms-hyphenate: 42365;
  hyphenate: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: 42365;
  -moz-hyphenate: 42365;
  -ms-hyphenate: 42365;
  hyphenate: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenate renders string 1`] = `
Array [
  .c0 {
  -webkit-hyphenate: July;
  -moz-hyphenate: July;
  -ms-hyphenate: July;
  hyphenate: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: July;
  -moz-hyphenate: July;
  -ms-hyphenate: July;
  hyphenate: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: June;
  -moz-hyphenate: June;
  -ms-hyphenate: June;
  hyphenate: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: June;
  -moz-hyphenate: June;
  -ms-hyphenate: June;
  hyphenate: June;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenate renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphenate: DarkSlateBlue;
  -moz-hyphenate: DarkSlateBlue;
  -ms-hyphenate: DarkSlateBlue;
  hyphenate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: DarkSlateBlue;
  -moz-hyphenate: DarkSlateBlue;
  -ms-hyphenate: DarkSlateBlue;
  hyphenate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: DarkSlateBlue;
  -moz-hyphenate: DarkSlateBlue;
  -ms-hyphenate: DarkSlateBlue;
  hyphenate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate: DarkSlateBlue;
  -moz-hyphenate: DarkSlateBlue;
  -ms-hyphenate: DarkSlateBlue;
  hyphenate: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
